home/static/home/css/home.css
/*=========================
    homepage
==========================*/
:root {
    --light-blue: #8ECAE6;
    --blue: #219EBC;
    --dark-blue: #023047;
    --yellow: #FFB703;
    --orange: #FB8500;
    --red: #d62828;
    --hero-txt-bg: rgba(19, 18, 19, 0.5)
}

.hero-section {
    display: flex;
    height: 84vh;
    width: 100%;
    padding-top: 10px;
    margin: 0;
    flex: 1 0 auto;
    justify-content: center;
    align-items: center;
}

.hero-image {
    background: url('/media/hero.jpg') no-repeat center center fixed;
    background-color: black;
    background-size: cover;
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

.hero-logo {
    font-size: 6rem;
}

.hero-text-container {
    align-items: flex-start;
}

.hero-text {
    margin: 50px 200px 25px 200px;
    padding: 100px 200px 25px 200px;
    height: 200px;
    width: 100%;
    color: white;
}

.hero-buttons {
    padding-top: 50px;
}

.home-action-btn {
    margin: 10px;
    height: 100px;
}

.hero-subtext {
    color: white;
    height: auto;
    width: 100%;
    padding-top: 50px;
}

.subtext {
    text-align: center;
    font-size: 2rem;
    width: 50vw;
    margin: auto;
}

.hero-badge {
    background: var(--dark-blue);
    color: white;
}
/*
================ Find books section ==============
*/

.find-books {
    background-color: var(--yellow);
    display: flex;
    flex: 1 0 auto;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 20vh;
    min-height: 150px;
    margin: 0;
}

.find-books-row {
    height: 100%;
    width: 100%;
    max-width: 1200px;
    padding: 2rem 4rem 2rem 4rem;
}

.find-books-col {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.find-books-col-icon-row {
    width: 100%;
    margin: 0;
}

.find-books-col-title {
    display: flex;
    justify-content: center;
    margin: auto;
    width: 100%;
    padding: 2rem;
}

.find-books i {
    font-size: 5rem;
    color: var(--dark-blue);
}

.find-books a,
.find-books i {
    color: var(--dark-blue);
    transform: scale(1);
}

.find-books a:hover,
.find-books i:hover {
    transform: scale(1.05);
    transition: 200ms ease-in-out;
    color: var(--blue)
}

.story-of-civ-section {
    height: 110vh;
    min-height: fit-content;
    width: 100%;
    background-color: var(--dark-blue);
    display: flex;
    flex: 1 0 auto;
    padding: 0;
    margin: 0;
}

.story-of-civ-row {
    max-width: 1500px;
    min-height: fit-content;
    margin: auto;
}

.story-of-civ-section a {
    color: var(--yellow);
}

.col-left {
    padding-left: 2rem;
    min-height: fit-content;
}

.col-right {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
}

.col-right .row {
    margin: auto;
}

.col-right .row h4 {
    text-align: left;
    color: var(--yellow);
    max-width: 500px;
    padding: 3rem;
}

.left-col-top-row,
.left-col-bottom-row {
    display: flex;
    min-height: fit-content;
    justify-content: center;
    width: 100%;
}

.left-col-top-row {
    height: 25%;
    width: 100%;
}

.left-col-bottom-row {
    height: 75%;
    width: 100%;
}

.will-ariel-image {
    margin: auto;
    width: 500px;
    height: 500px;
}

.left-col-bottom-row {
    padding: 4rem 0 0 10rem;
}

.left-col-top-row h2 {
    font-size: 3rem;
    width: 100%;
    color: var(--yellow);
    padding: 1rem;
}

.left-col-top-row h3 {
    font-size: 2.5rem;
    width: 100%;
    color: var(--yellow);
    padding: 1rem;
}

.left-col-top-row h3 {
    padding-left: 5rem;
}

/*=========================
    About us page
==========================*/
.about-container {
    flex: 1 0 auto;
    padding-top: 3rem;
    padding-bottom: 15rem;
}

.about-us-image {
    background: url('/media/about-us.jpg') no-repeat center center fixed;
    background-color: black;
    background-size: cover;
    width: 80%;
    height: 400px;
    padding: 0;
    margin: 0;
}

.ceo-quote {
    padding: 3rem 2rem 2rem 0
}

.famous-people {
    padding-top: 4rem;
    height: 80vh;
}

.famous-people a {
    text-decoration: none;
    color: white;
}

.famous-people a:hover {
    cursor: pointer;
    text-decoration: underline;
    color: lightblue;
}

.dialogue-icon {
    font-size: 10rem;
}

.mads-mikkelson-image {
    height: 580px;
    width: 400px;
}

/*===================================
           Media Queries
===================================*/

@media screen and (max-width: 1024px) {

    .story-of-civ-section {
        padding: 1rem;
        height: 1200px;
    }
    
    .story-of-civ-row {
        min-height: fit-content;
        margin: auto;
    }
    
    .story-of-civ-section a {
        color: var(--yellow);
    }
    
    .col-left {
        padding-left: 0;
    }
    
    .col-right .row {
        margin: auto;
    }
    
    .col-right .row h4 {
        text-align: center;
        padding: 2rem;
    }
    
    .will-ariel-image {
        margin: auto;
        width: 500px;
        height: 500px;
    }
    
    .left-col-bottom-row {
        padding: 5rem;
    }
    
    .left-col-top-row h2, h3 {
        text-align: center;
        padding: 2rem;
    }

    .about-container {
        padding-bottom: 20rem;
    }
}

@media screen and (max-width: 991px) {

    .hero-logo {
        font-size: 3rem;
        padding-top: 3rem;
    }

    .hero-text {
        padding: 0;
        margin: auto;
    }

    .hero-subtext {
        padding: 0;
    }

    .subtext {
        margin: auto;
    }

    .hero-badge {
        display: none;
    }

    .story-of-civ-section {
        padding: 0;
        height: 1500px;
    }

    .left-col-bottom-row {
        padding: 3rem 1rem 0 1rem;
    }

    .col-right {
        flex-direction: row;
    }

    .find-books i {
        font-size: 3rem;
        color: var(--dark-blue);
    }

    .about-container {
        padding-bottom: 30rem;
    }

    .mads-container {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .mads-mikkelson-image {
        margin: auto;
    }
}

@media screen and (max-width: 750px) {

    .find-books-row {
        padding: 0;
    }

    .find-books-col-title {
        padding: 0.2rem;
    }

    .find-books i {
        font-size: 2.5rem;
    }

    .find-books h4 {
        font-size: 0.8rem;
    }

    .story-of-civ-section {
        padding: 0;
        height: 1200px;
    }

    .left-col-bottom-row {
        display: none;
    }

    .col-right {
        flex-direction: column;
        padding: 0;
    }
}

@media screen and (max-width: 664px) {
    
    .left-col-top-row h2 {
        font-size: 2.5rem;
        width: 100%;
        color: var(--yellow);
    }
    
    .left-col-top-row h3 {
        font-size: 1.5rem;
        width: 100%;
        color: var(--yellow);
    }

    .col-right .row h4 {
        padding: 3rem 0 0 0;
    }
    
    .will-ariel-image {
        margin: auto;
        width: 300px;
        height: 300px;
    }

    .left-col-bottom-row {
        padding-top: 10rem;
    }

    .about-us-image {
        height: 200px;
    }

}

@media screen and (max-width: 490px) {


    .story-of-civ-section {
        padding: 0;
        height: 1500px;
    }

    .about-container {
        padding-bottom: 35rem;
    }

}


@media screen and (max-width: 360px) {

    .story-of-civ-section {
        padding: 0;
        height: 1650px;
    }

}

